--- a/scss/settings/_settings.scss
+++ b/scss/settings/_settings.scss
@@ -162,6 +162,7 @@ $button-color-light: white !default;
 $button-type-scale: $form-type-scale - 1 !default;
 $button-text-transform: uppercase !default;
 $button-radius: $form-radius !default;
+$button-use-radius: true !default;
 $button-transition-duration: 0.3s !default;
 
 // Transparent Buttons
