--- a/scss/modules/_buttons.scss
+++ b/scss/modules/_buttons.scss
@@ -35,7 +35,7 @@
 
     &.inline { margin-bottom: 0; }
 
-    &.block { @extend %row; margin: 0; }
+    &.block { display: block; width: 100%; margin-left: 0; margin-right: 0; }
 
     &.full {
         width: 100%;
@@ -83,6 +83,7 @@
         margin-right: $button-group-margin-right;
     }
 
+
     &.vertical {
         display: inline-block;
 
@@ -109,6 +110,11 @@
                     @include border-bottom-right-radius($button-radius);
                 }
             }
+        }
+
+        &.block { 
+            display: block;
+            margin-bottom: $button-group-margin-bottom;
         }
     }
 
